# batphone

./: .classpath  .gitignore  .gitmodules  .project  AndroidManifest.xml  BUILD.txt  CC-BY-4.0.md  CONTRIBUTORS.md  COPYING  CREDITS.md  CURRENT-RELEASE.md  DEVELOP.md  INSTALL.md  LICENSE-DOCUMENTATION.md  LICENSE-SOFTWARE.md  LICENSE.md  Makefile  Makefile.in  PRIVACY.md  README  README.TXT  README.md  TODO  aa  ant.properties  batman.c  build.properties  build.sh  build.xml  build.xml.r12  build_setup.sh  client.c  dataformats.c  default.properties  dna.c  gateway.c  git  gradle.properties  hlrdata.c  meshpotato_build  (+16 more)
.externalToolBuilders/: Ant Pre-build.launch
app/: .gitignore  build.gradle  proguard-rules.pro
assets/: deleted  helpabout.html  helpaccounts.html  helpadhoc.html  helpconnect.html  helpdonate.html  helpindex.html  helpinterface.html  helplicence.html  helplinks.html  helppermissions.html  helpprivacy.html  helprelease.html  helpscreen.html  helpsecurity.html  helpsettings.html  helpsharing.html  helpwizard.html  index.html  servalhelp.css
doc/: Auto-Upgrade.md  Build-for-Release.md  RELEASE-0.07.md  RELEASE-0.08.md  RELEASE-0.90.1.md  RELEASE-0.90.md  RELEASE-0.91.md  RELEASE-0.92.md  RELEASE-0.93.md  Sensor-Logging-Demo.md
hi-res/: promo.xcf  (+1 more)
jni/dna/: .gitignore  Android.mk  asterisk_app.c  batman.c  ciphers.c  configure.in  dna.c  export.c  hlrdata.c  openwrt-makefile  overlay.c  packetformats.c  peers.c  responses.c  server.c
jni/dna/asterisk_include/asterisk/: build.h  poll-compat.h  version.h
jni/dna/win32/: dna.sln  dna.vcproj  win32.c
(+1724 files in other folders)
